--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,9 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(astr CONFIG REQUIRED)
 find_package(ZeroMQ CONFIG REQUIRED)
 find_package(tl-expected CONFIG REQUIRED)
-find_package(fmt CONFIG REQUIRED) # until apple clang catches up
 
 
 list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
-include(setup_compiler)
-include(default_flags)
 
 if (${ZQ_TEST_PROJECT})
     include(CTest)
@@ -45,6 +42,7 @@ target_sources(zq INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/config.hpp>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/context.hpp>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/error.hpp>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/error_fmt.hpp>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/message.hpp>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/message_proto.hpp> # doesnt matter to have the header if it's not used
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/zq/socket.hpp>
@@ -68,7 +66,6 @@ target_link_libraries(zq
     INTERFACE
       libzmq
       tl::expected # until C++23
-      fmt::fmt # until apple clang catches up
       a4z::astr
 )
 
